force-app/main/default/objects/Media__c/fields/Available_media__c.field-meta.xml
<CustomField>
    <fullName>Available_media__c</fullName>
    <formula>Total_Media__c  -  Media_Issued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>