force-app/main/default/objects/Media__c/fields/Books__c.field-meta.xml
<CustomField>
    <fullName>Books__c</fullName>
    <label>Books</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Medias__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Children Fiction</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Self Help</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Spiritual</fullName>
            </value>
            <value>
                <fullName>Biographies</fullName>
            </value>
            <value>
                <fullName>Inspirational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>