force-app/main/default/objects/Media__c/fields/Media_Issued__c.field-meta.xml
<CustomField>
    <fullName>Media_Issued__c</fullName>
    <label>Media Issued</label>
    <summaryFilterItems>
        <field>CutomerMedia__c.Status__c</field>
        <operation>equals</operation>
        <value>Issued</value>
    </summaryFilterItems>
    <summaryForeignKey>CutomerMedia__c.Media__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>