force-app/main/default/objects/Media__c/fields/Medias__c.field-meta.xml
<CustomField>
    <fullName>Medias__c</fullName>
    <label>Category Of Books</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIction</fullName>
            </value>
            <value>
                <fullName>Non-Fiction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>