force-app/main/default/objects/Media__c/fields/Penalty_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Per_Day__c</fullName>
    <label>Penalty Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>