force-app/main/default/objects/Media__c/fields/Total_Media__c.field-meta.xml
<CustomField>
    <fullName>Total_Media__c</fullName>
    <label>Total Media</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>